--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -17,7 +17,7 @@
             <children>
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                 <children>
-                    <Label fx:id="seasonLabel" text="Season 2020" styleClass="heading, season"/>
+                    <Label fx:id="seasonLabel" text="SEASON 1" styleClass="season"/>
                     <Pane HBox.hgrow="ALWAYS" />
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <Label contentDisplay="RIGHT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308">
@@ -29,9 +29,10 @@
                     </HBox>
                  </children>
                 </HBox>
-                <AnchorPane>
+                <AnchorPane VBox.vgrow="ALWAYS">
                     <TabPane fx:id="subDivisionTabs" tabClosingPolicy="UNAVAILABLE" styleClass="subDivisionTabs"
-                             AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="11.0" maxWidth="600.0">
+                             AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="11.0" AnchorPane.bottomAnchor="0.0"
+                             maxWidth="600.0">
                     </TabPane>
                     <ComboBox fx:id="majorDivisionPicker" styleClass="division-selector" onAction="#onMajorDivisionChanged"
                               AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" promptText="a"/>
