--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
@@ -15,6 +14,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.Tooltip?>
 <StackPane fx:id="mainRoot" alignment="TOP_LEFT" minHeight="10.0" minWidth="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.main.MainController">
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" VBox.vgrow="ALWAYS">
         <children>
@@ -55,19 +55,35 @@
                <MenuButton fx:id="navigationDropdown" minHeight="-Infinity" minWidth="-Infinity" />
                     <Pane maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
                <HBox fx:id="rightMenuPane" alignment="TOP_RIGHT" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="right-menu">
-                  <children>
-                      <StackPane alignment="TOP_RIGHT" maxHeight="-Infinity">
-                          <children>
-                              <Button fx:id="notificationButton" contentDisplay="CENTER" onAction="#onNotificationsButtonClicked" styleClass="inbox-button">
-                                  <graphic>
-                                      <StackPane>
-                                          <Region styleClass="inbox-icon" />
-                                    <Region styleClass="badge" />
-                                      </StackPane>
-                                  </graphic>
-                              </Button>
-                          </children>
-                      </StackPane>
+                   <children>
+                       <Button fx:id="discordButton" maxHeight="-Infinity" mnemonicParsing="false"
+                               styleClass="discord-button" onAction="#onDiscordButtonClicked">
+                           <graphic>
+                               <Region styleClass="icon,discord-icon"/>
+                           </graphic>
+                           <tooltip>
+                               <Tooltip text="%discord.join"/>
+                           </tooltip>
+                           <HBox.margin>
+                               <Insets right="10.0"/>
+                           </HBox.margin>
+                       </Button>
+                       <StackPane alignment="TOP_RIGHT" maxHeight="-Infinity">
+                           <children>
+                               <Button fx:id="notificationButton" contentDisplay="CENTER"
+                                       onAction="#onNotificationsButtonClicked" styleClass="inbox-button">
+                                   <graphic>
+                                       <StackPane>
+                                           <Region styleClass="inbox-icon"/>
+                                           <Region styleClass="badge"/>
+                                       </StackPane>
+                                   </graphic>
+                               </Button>
+                           </children>
+                           <HBox.margin>
+                               <Insets right="10.0"/>
+                           </HBox.margin>
+                       </StackPane>
                       <fx:include source="user_button.fxml" />
                   </children>
                   <HBox.margin>
