--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
@@ -30,7 +30,9 @@
         </HBox>
         <HBox spacing="15.0" alignment="CENTER_LEFT">
             <children>
-                <Label fx:id="ratingLabel" text="%teammatchmaking.rating" styleClass="player-card-text, uppercase" />
+                <ImageView fx:id="leagueImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true"
+                           preserveRatio="true"/>
+                <Label fx:id="leagueLabel" text="%leaderboard.divisionName" styleClass="player-card-text, uppercase" />
                 <Label fx:id="gameCountLabel" text="%teammatchmaking.gameCount" styleClass="player-card-text, uppercase" />
                 <Pane HBox.hgrow="ALWAYS" />
                 <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="36.0" preserveRatio="true" />
