--- a/src/main/resources/theme/chat/chat_user_item.fxml
+++ b/src/main/resources/theme/chat/chat_user_item.fxml
@@ -3,37 +3,20 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="chatUserItemRoot" hgap="5.0"
-          onContextMenuRequested="#onContextMenuRequested" onMouseClicked="#onItemClicked" styleClass="chat-user-item"
-          xmlns="http://javafx.com/javafx/8.0.111" fx:controller="com.faforever.client.chat.ChatUserItemController">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0"/>
-        <ColumnConstraints/>
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="5.0"/>
-        <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="10.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints vgrow="ALWAYS"/>
-        <RowConstraints vgrow="ALWAYS"/>
-    </rowConstraints>
+<?import javafx.scene.layout.HBox?>
 
+<HBox fx:id="chatUserItemRoot" alignment="CENTER_LEFT" spacing="3.0" xmlns="http://javafx.com/javafx/11.0.1"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChatUserItemController">
     <children>
-        <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true"
-                   GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER"/>
-        <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true"
-                   preserveRatio="true" GridPane.columnIndex="1" GridPane.valignment="CENTER"/>
+        <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true"/>
+        <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"/>
         <MenuButton fx:id="clanMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                    styleClass="chat-user-control-clan" text="[CLAN]"
-                    GridPane.columnIndex="2" onMouseClicked="#onClanMenuRequested" onMouseEntered="#updateClanData"/>
+                    onMouseClicked="#onClanMenuRequested" onMouseEntered="#updateClanData"
+                    styleClass="chat-user-control-clan" text="[CLAN]"/>
         <Label fx:id="usernameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" onMouseClicked="#onItemClicked"
                onMouseEntered="#onMouseEnteredUserNameLabel" styleClass="chat-user-item-username"
-               text="&lt;Username&gt;"
-               GridPane.columnIndex="3"/>
-        <ImageView fx:id="playerStatusIndicator" GridPane.columnIndex="4" GridPane.halignment="RIGHT"
-                   GridPane.rowSpan="2147483647"/>
+               text="&lt;Username&gt;" HBox.hgrow="ALWAYS"/>
+        <ImageView fx:id="playerStatusIndicator"/>
+        <ImageView fx:id="playerMapImage" fitHeight="16.0" fitWidth="16.0"/>
     </children>
-</GridPane>
+</HBox>
