--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
@@ -7,10 +7,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playerItemRoot" prefHeight="75.0" spacing="4.0"
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playerItemRoot" prefHeight="75.0" spacing="10.0"
          xmlns="http://javafx.com/javafx/11.0.1" onContextMenuRequested="#onContextMenuRequested" styleClass="player-card"
-         fx:controller="com.faforever.client.teammatchmaking.PartyMemberItemController">
-        <HBox>
+         fx:controller="com.faforever.client.teammatchmaking.PartyMemberItemController" alignment="CENTER_LEFT">
+    <ImageView fx:id="leagueImageView" fitHeight="40.0" fitWidth="80.0" pickOnBounds="true"
+               preserveRatio="true"/>
+    <VBox HBox.hgrow="ALWAYS">
+        <HBox spacing="4.0">
             <HBox alignment="CENTER_LEFT" spacing="4.0" HBox.hgrow="ALWAYS" >
                 <children>
                     <Label fx:id="clanLabel" styleClass="clan" text="[CLAN]" />
@@ -27,24 +30,28 @@
             </HBox>
             <JFXButton fx:id="kickPlayerButton" onAction="#onKickPlayerButtonClicked" text=""
                        styleClass="icon-button" />
+            <Pane HBox.hgrow="ALWAYS" />
+            <HBox spacing="5.0" alignment="CENTER_LEFT">
+                <Label fx:id="uefLabel" styleClass="icon, factionindicator, uef" text="" />
+                <Label fx:id="cybranLabel" styleClass="icon, factionindicator, cybran" text=""/>
+                <Label fx:id="aeonLabel" styleClass="icon, factionindicator, aeon" text=""/>
+                <Label fx:id="seraphimLabel" styleClass="icon, factionindicator, seraphim" text="" HBox.hgrow="ALWAYS"/>
+            </HBox>
         </HBox>
         <HBox spacing="15.0" alignment="CENTER_LEFT">
             <children>
-                <ImageView fx:id="leagueImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true"
-                           preserveRatio="true"/>
                 <Label fx:id="leagueLabel" text="%leaderboard.divisionName" styleClass="player-card-text, uppercase" />
                 <Label fx:id="gameCountLabel" text="%teammatchmaking.gameCount" styleClass="player-card-text, uppercase" />
-                <Pane HBox.hgrow="ALWAYS" />
-                <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="36.0" preserveRatio="true" />
-                <HBox spacing="5.0" alignment="CENTER_LEFT">
-                    <Label fx:id="uefLabel" styleClass="icon, factionindicator, uef" text="" />
-                    <Label fx:id="cybranLabel" styleClass="icon, factionindicator, cybran" text=""/>
-                    <Label fx:id="aeonLabel" styleClass="icon, factionindicator, aeon" text=""/>
-                    <Label fx:id="seraphimLabel" styleClass="icon, factionindicator, seraphim" text="" HBox.hgrow="ALWAYS"/>
+                <HBox HBox.hgrow="ALWAYS" alignment="CENTER_RIGHT">
+                    <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="36.0" preserveRatio="true" />
+                    <padding>
+                        <Insets right="1.0" />
+                    </padding>
                 </HBox>
             </children>
         </HBox>
+    </VBox>
     <padding>
         <Insets bottom="8.0" left="12.0" right="14.0" top="12.0" />
     </padding>
-</VBox>
+</HBox>
