Allow to toggle chat user list
Fixes #1935

--- a/src/main/resources/theme/play/custom_games.fxml
+++ b/src/main/resources/theme/play/custom_games.fxml
@@ -32,22 +32,28 @@
                                               <HBox alignment="BASELINE_LEFT" />
                                           </children>
                                       </FlowPane>
-                                      <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onTableButtonClicked" styleClass="game-list-type" text="%view.table">
+                                      <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false"
+                                                    onAction="#onTableButtonClicked" styleClass="game-list-type"
+                                                    text="%view.table">
                                           <toggleGroup>
-                                              <ToggleGroup fx:id="viewToggleGroup" />
+                                              <ToggleGroup fx:id="viewToggleGroup"/>
                                           </toggleGroup>
                                           <graphic>
-                                              <Region styleClass="icon,table-icon" />
+                                              <Region styleClass="icon,table-icon"/>
                                           </graphic>
                                       </ToggleButton>
-                                      <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onTilesButtonClicked" selected="true" styleClass="game-list-type" text="%view.tiles" toggleGroup="$viewToggleGroup">
+                                      <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false"
+                                                    onAction="#onTilesButtonClicked" selected="true"
+                                                    styleClass="game-list-type" text="%view.tiles"
+                                                    toggleGroup="$viewToggleGroup">
                                           <graphic>
-                                              <Region styleClass="icon,tiles-icon" />
+                                              <Region styleClass="icon,tiles-icon"/>
                                           </graphic>
                                       </ToggleButton>
-                                      <ToggleButton fx:id="toggleGameDetailPaneButton" mnemonicParsing="false" styleClass="pane-toggler">
+                                      <ToggleButton fx:id="toggleGameDetailPaneButton" mnemonicParsing="false"
+                                                    styleClass="pane-toggler, right">
                                           <graphic>
-                                              <Region styleClass="icon,toggle-icon" />
+                                              <Region styleClass="icon,toggle-icon"/>
                                           </graphic>
                                       </ToggleButton>
                                   </children>
