--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -737,13 +737,13 @@
   -fx-padding: 0.833333em .25em;
 }
 
-.toggle-button.pane-toggler:left:closed .toggle-icon,
-.toggle-button.pane-toggler:right:opened .toggle-icon {
+.toggle-button.pane-toggler.left .toggle-icon,
+.toggle-button.pane-toggler.right:selected .toggle-icon {
   -fx-shape: "M11.611,10.049l-4.76-4.873c-0.303-0.31-0.297-0.804,0.012-1.105c0.309-0.304,0.803-0.293,1.105,0.012l5.306,5.433c0.304,0.31,0.296,0.805-0.012,1.105L7.83,15.928c-0.152,0.148-0.35,0.223-0.547,0.223c-0.203,0-0.406-0.08-0.559-0.236c-0.303-0.309-0.295-0.803,0.012-1.104L11.611,10.049z";
 }
 
-.toggle-button.pane-toggler:left:opened .toggle-icon,
-.toggle-button.pane-toggler:right:closed .toggle-icon {
+.toggle-button.pane-toggler.left:selected .toggle-icon,
+.toggle-button.pane-toggler.right .toggle-icon {
   -fx-shape: "M8.388,10.049l4.76-4.873c0.303-0.31,0.297-0.804-0.012-1.105c-0.309-0.304-0.803-0.293-1.105,0.012L6.726,9.516c-0.303,0.31-0.296,0.805,0.012,1.105l5.433,5.307c0.152,0.148,0.35,0.223,0.547,0.223c0.203,0,0.406-0.08,0.559-0.236c0.303-0.309,0.295-0.803-0.012-1.104L8.388,10.049z";
 }
 
@@ -757,7 +757,7 @@
   -fx-padding: 0 0.25em;
 }
 
-.pane-toggler:right {
+.pane-toggler.right {
   -fx-border-width: 0;
   -fx-background-radius: 3 0 0 3;
 }
